(refactor) Remove benchmark attachment and drilling validation
